--- a/key-bar-qr-menu/src/pages/HomePage.module.css
+++ b/key-bar-qr-menu/src/pages/HomePage.module.css
@@ -120,7 +120,9 @@
 }
 
 .buttonIcon {
-  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   animation: bounce 2s infinite;
 }
 
